--- a/accounts.yml
+++ b/accounts.yml
@@ -2,4 +2,4 @@ build:
   version: "2.0"
 
 accounts:
-  message: "welcome to nctruong house related local APIs"
+  message: "welcome to nctruong house related local 123 APIs"
