--- a/accounts-qa.yml
+++ b/accounts-qa.yml
@@ -2,4 +2,4 @@ build:
   version: "2.0"
 
 accounts:
-  message: "welcome to nctruong house related QA 123 updated APIs"
+  message: "welcome to nctruong house related QA APIs"
